<resources>
    <string name="app_name">maskice.hr</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="caption">Samo najbolje za Vaš mobitel!</string>

    <!-- Master navigation options -->
    <string name="naslovnica">Naslovnica</string>
    <string name="racun">Moj račun</string>
    <string name="kosarica">Košarica</string>
    <string name="pretrazi_stranicu">Pretražite stranicu</string>
    <string name="prodajni_asortiman">Prodajni asortiman</string>
    <string name="oprema_za_mobitel">Oprema za mobitel</string>
    <string name="oprema_za_mobitel_univerzalno">Univerzalna oprema za mobitel</string>
    <string name="oprema_za_tablet">Oprema za tablet</string>
    <string name="kamere">Kamere</string>
    <string name="adapteri">Adapteri</string>
    <string name="drzaci">Držači</string>
    <string name="punjaci">Punjači</string>
    <string name="slusalice">Slušalice</string>
    <string name="zvucnici">Zvučnici</string>
    <string name="gadgeti">Gadgeti</string>
    <string name="memorije">Memorije</string>
    <string name="racunalna_periferija">Računalna periferija</string>
    <string name="ostala_oprema">Ostala oprema</string>
    <string name="o_nama_submenu">O nama i  naše usluge</string>
    <string name="o_nama">O nama</string>
    <string name="prodajna_mjesta">Prodajna mjesta</string>
    <string name="servis">Servis</string>
    <string name="veleprodaja">Veleprodaja</string>
    <string name="kontakt">Kontakt</string>
    <string name="about_app">O aplikaciji</string>

    <!-- About App Fragment Text -->
    <string name="about_app_heading">O aplikaciji</string>
    <string name="app_name_string">"maskice.hr Službena Android&#8482; Aplikacija"</string>
    <string name="verzija">Verzija aplikacije</string>
    <string name="verzija_code">2.0</string>
    <string name="izradio">Izradio</string>
    <string name="izradio_autor">Marko Idzan</string>
    <string name="changelog">Dnevnik promjena aplikacije (Changelog)</string>
    <string name="verzija_2_0">Verzija 2.0</string>
    <string name="verzija_1_5_1">Verzija 1.5.1</string>
    <string name="verzija_1_5">Verzija 1.5</string>
    <string name="verzija_1_4">Verzija 1.4</string>
    <string name="verzija_1_3">Verzija 1.3</string>
    <string name="verzija_1_2">Verzija 1.2</string>
    <string name="verzija_1_1">Verzija 1.1</string>
    <string name="verzija_1_0">Verzija 1.0</string>
    <string name="verzija_2_0_promjene">
        Vizualne promjene u aplikaciji i optimizacije
        \nUsklađivanje navigacije s web shop-om
        \nIspravljeni bug-ovi povezani s Android 5.0 i 5.1 verzijama Android&#8482; sustava
        \nDodana je rana podrška za Android&#8482; P sustav, \"notch\" na ekranima kao i 64-bitnu platformu
        \n
    </string>
    <string name="verzija_1_5_1_promjene">
        Ispravak bug-ova
        \nUsklađivanje navigacije s web shop-om
        \n
    </string>
    <string name="verzija_1_5_promjene">
        Fix - web chat prozor se otvarao u vanjskom pregledniku
        \nOptmizacije aplikacije
        \n
    </string>
    <string name="verzija_1_4_promjene">
        Ispravak bug-ova
        \nDodana je podrška za Android&#8482; 8.1 Oreo
        \n
    </string>
    <string name="verzija_1_3_promjene">
        Ispravak bug-ova
        \nPoboljšana navigacija
        \nOptimizacija za uređaje s 18:9 (2:1) Aspect Ratiom
        \n
    </string>
    <string name="verzija_1_2_promjene">
        Dodana podrška za Adaptive Icons
        \n
    </string>
    <string name="verzija_1_1_promjene">
        Ispravak bug-ova
        \nDodana je podrška za Android&#8482; 8.0 Oreo
        \n
    </string>
    <string name="verzija_1_0_promjene">
        Prvo izdanje aplikacije
        \n
    </string>

</resources>
