<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grp_master"
        android:checkableBehavior="single">

        <item
            android:id="@+id/homepage"
            android:title="@string/naslovnica" />

        <item
            android:id="@+id/cart_page"
            android:title="@string/kosarica" />

        <item
            android:id="@+id/my_account_page"
            android:title="@string/racun" />

        <item
            android:id="@+id/nav_pretrazi"
            android:title="@string/pretrazi_stranicu" />

    </group>

    <item
        android:title="@string/prodajni_asortiman" >

        <menu>

            <group
                android:id="@+id/grp_prodajni_asortiman"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_phones"
                    android:title="@string/oprema_za_mobitel" />

                <item
                    android:id="@+id/nav_universal_phone_cases"
                    android:title="@string/oprema_za_mobitel_univerzalno" />

                <item
                    android:id="@+id/nav_tablets"
                    android:title="@string/oprema_za_tablet" />

                <item
                    android:id="@+id/nav_cameras"
                    android:title="@string/kamere" />

                <item
                    android:id="@+id/nav_adapters"
                    android:title="@string/adapteri" />

                <item
                    android:id="@+id/nav_holders"
                    android:title="@string/drzaci" />

                <item
                    android:id="@+id/nav_chargers"
                    android:title="@string/punjaci" />

                <item
                    android:id="@+id/nav_headsets"
                    android:title="@string/slusalice" />

                <item
                    android:id="@+id/nav_speakers"
                    android:title="@string/zvucnici" />

                <item
                    android:id="@+id/nav_gadgets"
                    android:title="@string/gadgeti"/>

                <item
                    android:id="@+id/nav_memory"
                    android:title="@string/memorije" />

                <item
                    android:id="@+id/nav_racunalna_oprema"
                    android:title="@string/racunalna_periferija" />

                <item
                    android:id="@+id/nav_ostala_oprema"
                    android:title="@string/ostala_oprema" />

            </group>

        </menu>

    </item>

    <item
        android:title="@string/o_nama_submenu" >

        <menu>

            <group
                android:id="@+id/grp_o_nama"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_o_nama"
                    android:title="@string/o_nama" />

                <item
                    android:id="@+id/nav_prodajna_mjesta"
                    android:title="@string/prodajna_mjesta" />

                <item
                    android:id="@+id/nav_servis"
                    android:title="@string/servis" />

                <item
                    android:id="@+id/nav_veleprodaja"
                    android:title="@string/veleprodaja" />

                <item
                    android:id="@+id/nav_kontakt"
                    android:title="@string/kontakt" />

            </group>

        </menu>

    </item>

    <group
        android:id="@+id/grp_about"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about_app"
            android:title="@string/about_app" />

    </group>

</menu>