<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300"
    tools:context=".AboutAppFragment">

    <ScrollView
        style="@android:style/Widget.Material.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_300"
        android:elevation="5dp"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_view_background_shadow"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                app:cardBackgroundColor="@color/card_view_light_background"
                app:cardElevation="150dp"
                app:contentPadding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name_string"
                        android:scaleType="center"
                        android:src="@mipmap/ic_launcher_foreground" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/app_name_string"
                        android:textAlignment="center"
                        android:textAppearance="@android:style/TextAppearance.Material"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_view_light_background"
                app:cardElevation="150dp"
                app:contentPadding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verzija"
                        android:textAlignment="textStart"
                        android:textAllCaps="true"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verzija_code"
                        android:textAppearance="@android:style/TextAppearance.Material"
                        android:textSize="18sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/card_view_light_background"
                app:cardElevation="150dp"
                app:contentPadding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/izradio"
                        android:textAllCaps="true"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/izradio_autor"
                        android:textAlignment="center"
                        android:textAppearance="@android:style/TextAppearance.Material"
                        android:textSize="18sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/card_view_light_background"
                app:cardElevation="150dp"
                app:contentPadding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/changelog"
                        android:textAlignment="center"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/verzija_2_0"
                        android:textAlignment="center"
                        android:textAppearance="@android:style/TextAppearance.Material.Body2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/verzija_2_0_promjene"
                        android:textAlignment="center"
                        android:textAppearance="@android:style/TextAppearance.Material"
                        android:textSize="14sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>